[package]
name         = "signal-mirror"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-mirror"
description  = "Signal contract for the payload-blind sema version-control mirror."
publish      = false
links        = "signal-mirror"
build        = "build.rs"

[lib]
name = "signal_mirror"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["signal-frame/nota-text"]

[dependencies]
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "structural-shape-extension" }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "record-family-emission" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
